--- a/apt_compiler/build.gradle
+++ b/apt_compiler/build.gradle
@@ -9,6 +9,6 @@ dependencies {
     compile 'com.squareup:javapoet:1.9.0'
 
     compile 'com.google.auto.service:auto-service:1.0-rc2'
-    api project(':apt_annotation')
+    implementation project(':apt_annotation')
 }
 
